<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">Select date</string>
    <string name="selected_date_label">Selected date</string>
    <string name="your_age_in_minutes_label">Your age in minutes</string>
</resources>