<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textSize="20sp"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="48sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/ghost_white"
        android:background="@color/cerise" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textSize="20sp"
        android:padding="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:padding="5dp"
        android:backgroundTint="@color/celestial_blue"
        android:textColor="@color/ghost_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selected_date"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_date_label"
        android:textAlignment="center"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/your_age_in_minutes"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_age_in_minutes_label"
        android:textAlignment="center"
        android:padding="5dp" />

</LinearLayout>